manifest/appointment-api-service.yml
apiVersion: v1
kind: Service
metadata:
  name: appointment-api-service
spec:
  type: ClusterIP
  selector:
    app: appointment-api
  ports:
    - port: 80
